# TechStormHack-1st-place

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/audio/: __init__.py  diarization.py  production.py  realtime_stt.py  speaker_classifier.py  speech_analyzer.py  text_transcriber.py
app/llm/: yandexgpt.py
app/production/: constants.py  metrics.py  model.py  person.py  video_analyzer.py
app/utils/: cut.py  fps_change.py
app/video/: __init__.py  characters.py  detector.py  main_loop.py  person.py  viz.py
app/web/: __init__.py  main.py
tests/: playground.ipynb  test_audio.py  test_audio_cut.py  test_bert.py  test_image.py  test_offline_text_transcriber.py  test_realtimestt.py  test_speaker_classifier.py  test_video.py  test_video_cut.py  test_web.py
