[tool.poetry]
name = "techstormhack"
version = "0.1.0"
description = ""
authors = ["werserk <werserk@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
dlib = "^19.24.6"
opencv-python = "^4.10.0.84"
face-recognition = "^1.3.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = { extras = ["jupyter"], version = "^24.8.0" }

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
