[tool.poetry]
name = "techstormhack"
version = "0.1.0"
description = ""
authors = ["werserk <werserk@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
llvmlite = "^0.43.0"
numba = "^0.60.0"
pyannote-audio = "^3.3.1"
numpy = "1.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
